--- a/JavaScript、Vue/04. JS-基础语法-数据类型.html
+++ b/JavaScript、Vue/04. JS-基础语法-数据类型.html
@@ -24,7 +24,7 @@
     alert(typeof null);//object
 
     var a ;
-    alert(typeof a);//undefined?
+    alert(typeof a);//undefined
         
 </script>
 </html>
