--- a/homework/javaweb/experiment_1/index.html
+++ b/homework/javaweb/experiment_1/index.html
@@ -15,20 +15,22 @@
         <a href="custom.html" target="_self">传统习俗</a> | 
         <a href="local.html" target="_self">地方特色</a>
     </nav>
-    <section>
-        <h2>起源与意义</h2>
-        <p>春节起源于早期人类的原始信仰与自然崇拜，由上古时代岁首祈岁祭祀演变而来。在传承发展中承载了丰厚的历史文化底蕴。</p>
-    </section>
-    <section id="customs">
-        <h2>传统习俗</h2>
-        <p>春节期间包括除旧布新、拜神祭祖、祈福辟邪、亲朋团圆、欢庆娱乐和饮食等传统习俗。</p>
-        <img src="spring_festival_customs.jpg" alt="春节习俗">
-    </section>
-    <section>
-        <h2>地方特色</h2>
-        <p>全国各地春节庆祝活动具有各具特色，如广东的舞狮、四川的过年习俗等。</p>
-        <img src="spring_festival_local.jpg" alt="春节地方特色">
-    </section>
+    <div class="index-container">
+        <section class="introduce">
+            <h2>起源与意义</h2>
+            <p>春节起源于早期人类的原始信仰与自然崇拜，由上古时代岁首祈岁祭祀演变而来。在传承发展中承载了丰厚的历史文化底蕴。</p>
+        </section>
+        <section class="custom">
+            <h2>传统习俗</h2>
+            <p>春节期间包括除旧布新、拜神祭祖、祈福辟邪、亲朋团圆、欢庆娱乐和饮食等传统习俗。</p>
+            <img src="../image/custom.jpg">
+        </section>
+        <section class="local">
+            <h2>地方特色</h2>
+            <p>全国各地春节庆祝活动具有各具特色，如广东的舞狮、四川的过年习俗等。</p>
+            <img src="../image/local.jpg">
+        </section>
+    </div>
     <footer>
         <p>版权所有 &copy; 2024</p>
     </footer>
