--- a/homework/javaweb/experiment_1/index.html
+++ b/homework/javaweb/experiment_1/index.html
@@ -23,12 +23,12 @@
         <section class="custom">
             <h2>传统习俗</h2>
             <p>春节期间包括除旧布新、拜神祭祖、祈福辟邪、亲朋团圆、欢庆娱乐和饮食等传统习俗。</p>
-            <img src="../image/custom.jpg">
+            <img src="./image/custom.jpg">
         </section>
         <section class="local">
             <h2>地方特色</h2>
             <p>全国各地春节庆祝活动具有各具特色，如广东的舞狮、四川的过年习俗等。</p>
-            <img src="../image/local.jpg">
+            <img src="./image/local.jpg">
         </section>
     </div>
     <footer>
